about page and journals page

--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
             <p class="m-0 text-center text-white">Copyright &copy; Academic Journal 2024</p>
         </div>
     </footer>
+    <a href="./assets/lib/journal/journalimages/WhatsApp Image 2024-07-07 at 10.05.10 PM.jpeg"></a>
+    <a href="./assets/lib/journal/journalimages/WhatsApp Image 2024-07-07 at 8.29.45 PM.jpeg"></a>
+    <a href="./assets/lib/journal/journalimages/WhatsApp Image 2024-07-07 at 9.44.38 PM.jpeg"></a>
 
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <script>
@@ -131,21 +134,21 @@
                 title: 'Artificial Intelligence',
                 author: 'Prof. Pradipta Kumar Das',
                 description: 'Artificial Intelligence refers to the simulation of human intelligence in machines that are programmed to think and learn like humans.',
-                imagehref: './assets/images/ai.jpg',
+                imagehref: "./assets/lib/journal/journalimages/WhatsApp Image 2024-07-07 at 10.05.10 PM.jpeg",
                 pdfhref: 'ai.pdf',
             },
             {
                 title: 'Study of Mobile App Development Industry',
                 author: 'Abid Bin Syeed',
                 description: 'App development that targets handheld devices has now become a standard by which services reach the target audience faster since almost everyone has access to a mobile device. The App Development industry has only grown in leaps and bounds ever since its inception. This paper discusses in detail the Mobile App Development Industry and its predominance in India. Objectives: To analyse and understand the Mobile App Development Industry worldwide, to understand the preference, usage, revenue, cost, and scope of App Development in India and to perform a SWOC Analysis for the Mobile App Development Industry.',
-                imagehref: './assets/images/mobile-app.jpg',
+                imagehref: "./assets/lib/journal/journalimages/WhatsApp Image 2024-07-07 at 8.29.45 PM.jpeg",
                 pdfhref: 'mobile-app.pdf',
             },
             {
                 title: 'Money Management among University Students',
                 author: 'Wan Rasyidah Wan Nawang, Syadiyah Abdul Shukor',
                 description: 'Money matters are integral to our lives and for university students, these are an even more pressing aspect. Thus, it is important for university students to have prudent and responsible money management as this can impact their future and personal well-being. The study is set to meet its objective which is to investigate the impact of economic, social, and psychological factors on money management among university students.',
-                imagehref: './assets/images/money-management.jpg',
+                imagehref: "./assets/lib/journal/journalimages/WhatsApp Image 2024-07-07 at 9.44.38 PM.jpeg",
                 pdfhref: 'money-management.pdf',
             },
         ];
